log

ju., 10 de mar. de 2022 22:17:00: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
284a8e0
ju., 10 de mar. de 2022 22:59:31: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b82571f
vi., 11 de mar. de 2022 10:44:43: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
368995d
vi., 11 de mar. de 2022 11:11:50: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
d1d2e94
vi., 11 de mar. de 2022 11:19:29: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
8e3e7ec
vi., 11 de mar. de 2022 11:22:06: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
b959862
vi., 11 de mar. de 2022 11:22:31: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
562a8dc
vi., 11 de mar. de 2022 11:22:51: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
ffc79a5
vi., 11 de mar. de 2022 11:23:33: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
ebf2e16
vi., 11 de mar. de 2022 11:24:32: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
232798c
vi., 11 de mar. de 2022 11:29:31: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:3: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
 c = suma;
   ^
cc1.exe: all warnings being treated as errors
Compilation failed
e6f472b
vi., 11 de mar. de 2022 11:29:46: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|7
total_score: 0/70
c419957
vi., 11 de mar. de 2022 11:31:34: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
d765f96
vi., 11 de mar. de 2022 17:40:08: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
bf90591
vi., 11 de mar. de 2022 17:42:00: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
c9d82a1
vi., 11 de mar. de 2022 17:58:13: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:46:27: error: expected expression before ']' token
  *suma= *suma- (sumaN ( a[], n));
                           ^
Compilation failed
25058ff
vi., 11 de mar. de 2022 18:07:42: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:47:21: error: expected expression before ']' token
  total = sumaN ( *a[] , n);
                     ^
Compilation failed
117619c
vi., 11 de mar. de 2022 18:08:38: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3330db9
vi., 11 de mar. de 2022 18:11:34: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:47:14: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
  suma-=sumaN(*a,n-m);
              ^
exercises.c:22:5: note: expected 'int *' but argument is of type 'int'
 int sumaN(int a[], int N) {
     ^~~~~
exercises.c:42:6: error: unused variable 'total' [-Werror=unused-variable]
  int total;
      ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7cf6d0b
vi., 11 de mar. de 2022 18:13:02: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
d6276c3
vi., 11 de mar. de 2022 19:06:59: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
77aef60
